# atrium

./: Cargo.toml  README.md
docs/: architecture.md
scripts/: nitro-testnode.sh
src/: lib.rs  main.rs
