[package]
name = "dynamic-lp-hook"
version = "0.2.0"
edition = "2021"

[dependencies]
stylus-sdk = { version = "=0.8.1", default-features = false, features = [
    "mini-alloc",
] }
alloy-primitives = { version = "=0.8.20", default-features = false }
alloy-sol-types = { version = "=0.8.20", default-features = false }

[dev-dependencies]
motsu = "0.5.0"

[features]
export-abi = ["stylus-sdk/export-abi"]
std = []

[lib]
crate-type = ["lib", "cdylib"]

[profile.release]
codegen-units = 1
strip = true
lto = true
panic = "abort"
opt-level = "s"
